
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "studyxiao", email = "studyxiao@163.com"},
]
dependencies = [
    "flask>=2.3.2",
    "python-dotenv>=1.0.0",
    "redis>=4.5.5",
    "celery>=5.2.7",
    "sqlalchemy>=2.0.15",
    "gunicorn>=20.1.0",
    "gevent>=22.10.2",
]
requires-python = ">=3.11"
license = {text = "MIT"}
